Update prism-tests/README.md and example files.
More info on testing scripts.